Fixed Dack Attack Combo & added death code

--- a/Armageddon Fighter II/Assembly-CSharp.csproj
+++ b/Armageddon Fighter II/Assembly-CSharp.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Body.cs" />
     <Compile Include="Assets\Scripts\Entity.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
