--- a/Armageddon Fighter II/Assembly-CSharp.csproj
+++ b/Armageddon Fighter II/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Body.cs" />
+    <Compile Include="Assets\Scripts\Demon.cs" />
     <Compile Include="Assets\Scripts\Entity.cs" />
     <Compile Include="Assets\Scripts\EventManager.cs" />
     <Compile Include="Assets\Scripts\GameManager.cs" />
